# curso-QA

./: .gitignore  .travis.yml  README.md  pyproject.toml  qa.json  requirements.txt
HU/: HU0.md  HU1.md  HU2.md  HU3.md  HU4.md
flaskr/app/: .mapbox_token  __init__.py  barchart.py  map.py  routes.py
flaskr/app/tests/: test_base.py
