[tool.poetry]
name = "kakapos"
version = "1.0.0"
description = ""
authors = ["kakapos team"]
license = "GLP"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
test = "poetry run python -m pytest"
coverage = "pytest --cov=./flaskr/app/tests/"
run = "python -m flask run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
