[tool.poetry]
name = "kakapos"
version = "1.0.0"
description = ""
authors = ["kakapos team"]
license = "GLP"

[tool.poetry.dependencies]
python = "3.7"
pyyaml = "^5.3.1"
pytest-cov = "^2.10.1"
flask = "^1.1.2"

[tool.poe.tasks]
test = "poetry run python -m pytest"
coverage = "pytest --cov=./flaskr/app/tests/"
run = "python -m flask run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
