[tool.poetry]
name = "kakapos"
version = "1.0.0"
description = ""
authors = ["kakapos team"]
license = "GLP"

[tool.poetry.dependencies]
python = "3.7"
flask = "^1.1.2"

[tool.poe.tasks]
test = "poetry run python -m pytest"
coverage = "pytest --cov=./flaskr/app/tests/"
run = "python -m flask run"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
